--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,28 @@ ul{
 .about-content{
     font-family: 'Montserrat Alternates';
     margin-bottom: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.about-illustration{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    min-width: 200px;
+    max-width: 300px;
+}
+
+.about-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+
 }
 /* end about */
 
@@ -199,6 +221,14 @@ ul{
     min-height: 250px;
     margin: auto;
     padding: 20px;
+    display: flex;
+}
+
+.projects-gif{
+    width: 100%;
+    height: 100%;
+}
+.projects-github{
 }
 /* end projects */
 
@@ -253,5 +283,18 @@ ul{
     font-size: 15px;
     padding-left: 20px;
 
+}
+
+.contact-button{
+    margin-top: 3px;
+    width: 100%;
+    height: 40px;
+    border-radius: 0;
+    border: none;
+    background: #505a73;
+}
+
+.contact-button:active{
+    background: #464e63;
 }
 /* end contact */
