fixed a lot of stuff

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ html,body{
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     background: #f4f4f4;
@@ -11,7 +11,7 @@ html,body{
 }
 
 .container{
-    width: 80%;
+    width: 80vw;
 }
 
 a{
@@ -43,8 +43,17 @@ ul{
 
 /* start banner */
 .banner{
-    width: 100%;
-    height: 57%;
+    width: 100%;    
+}
+
+.banner-image{
+    height: 57vh !important;
+    background-image: url("../imges/banner3.jpg");
+    background-attachment: fixed;
+    background-position-x: center;
+    background-position-y: -20vh;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .banner > img{
@@ -58,7 +67,7 @@ ul{
 .navbar{
     display: flex;
     justify-content: center;
-    background: #2B0F25;
+    background: #252934;
     color: white;
     font-family: "Raleway",sans-serif;
     font-size: 14px;
@@ -81,12 +90,123 @@ ul{
 }
 
 .navbar-slice{
-    background: #2B0F25;
+    background: #252934;
     min-height: 20px;
+    margin-top: -1px;
     clip-path: polygon(100% 0, 0 100%, 0 0);
 }
 
 /* end navbar */
+
+/* start mobile-nav */
+
+  .circular-menu {
+    position: fixed;
+    bottom: 1em;
+    right: 1em;
+    display: none;
+    z-index: 100;
+  }
+  
+  .circular-menu .floating-btn {
+    display: block;
+    width: 3.5em;
+    height: 3.5em;
+    border-radius: 50%;
+    background-color: #1E242C;
+    box-shadow: 0 2px 5px 0 hsla(0, 0%, 0%, .26);  
+    color: hsl(0, 0%, 100%);
+    text-align: center;
+    line-height: 3.9;
+    cursor: pointer;
+    outline: 0;
+  }
+  
+  .circular-menu.active .floating-btn {
+    box-shadow: inset 0 0 3px hsla(0, 0%, 0%, .3);
+  }
+  
+  .circular-menu .floating-btn:active {
+    box-shadow: 0 4px 8px 0 hsla(0, 0%, 0%, .4);
+  }
+  
+  .circular-menu .floating-btn i {
+    font-size: 1.3em;
+    transition: transform .2s;  
+  }
+  
+  .circular-menu.active .floating-btn i {
+    transform: rotate(-45deg);
+  }
+  
+  .circular-menu:after {
+    display: block;
+    content: ' ';
+    width: 3.5em;
+    height: 3.5em;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -2;
+    background-color: #1E242C;
+    transition: all .3s ease;
+  }
+  
+  .circular-menu.active:after {
+    transform: scale3d(5.5, 5.5, 1);
+    transition-timing-function: cubic-bezier(.68, 1.55, .265, 1);
+  }
+  
+  .circular-menu .items-wrapper {
+    padding: 0;
+    margin: 0;
+  }
+  
+  .circular-menu .menu-item {
+    position: absolute;
+    top: .2em;
+    right: .2em;
+    z-index: -1;
+    display: block;
+    text-decoration: none;
+    color: hsl(0, 0%, 100%);
+    font-size: 1em;
+    width: 3em;
+    height: 3em;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 3;
+    background-color: hsla(0,0%,0%,.1);
+    transition: transform .3s ease, background .2s ease;
+  }
+  
+  .circular-menu .menu-item:hover {
+    background-color: hsla(0,0%,0%,.3);
+  }
+  
+  .circular-menu.active .menu-item {
+    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .circular-menu.active .menu-item:nth-child(1) {
+    transform: translate3d(1em,-7em,0);
+  }
+  
+  .circular-menu.active .menu-item:nth-child(2) {
+    transform: translate3d(-3.5em,-6.3em,0);
+  }
+  
+  .circular-menu.active .menu-item:nth-child(3) {
+    transform: translate3d(-6.5em,-3.2em,0);
+  }
+  
+  .circular-menu.active .menu-item:nth-child(4) {
+    transform: translate3d(-7em,1em,0);
+  }
+  
+  
+/* end mobile-nav */
 
 /* start about */
 .about{
@@ -107,27 +227,36 @@ ul{
     font-family: 'Montserrat Alternates';
     margin-bottom: 60px;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+    flex-wrap: wrap;
 }
 
+/* .about-content>div{
+    min-height: 50vh;
+} */
+
 .about-illustration{
-    display: flex;
     justify-content: center;
     align-items: center;
     padding: 15px;
     min-width: 200px;
-    max-width: 300px;
+    /* max-width: 300px; */
+    flex: 1;
+}
+
+.lottie{
+    height: 50vh !important;
 }
 
 .about-text{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px;
-
+    flex: 1;
+    min-width: 200px;
+    /* padding: 15px; */
+    
 }
 /* end about */
 
@@ -139,6 +268,7 @@ ul{
 }
 
 .skills{
+    margin-top: -1px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -189,6 +319,7 @@ ul{
     background: white;
     min-height: 20px;
     clip-path: polygon(0 0, 100% 0, 0 100%);
+    margin-top: -1px;
 }
 /* end skills */
 
@@ -237,10 +368,11 @@ ul{
     background: #252934;
     width: 100%;
     min-height: 80px;
-    clip-path: polygon(50% 100%, 100% 0, 100% 100%, 0 100%, 0 0);
+    clip-path: polygon(50% 99%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 .contact{
+    margin-top: -1px;
     background: #252934;
     display: flex;
     flex-direction: column;
@@ -298,3 +430,16 @@ ul{
     background: #464e63;
 }
 /* end contact */
+
+
+/* start media-querries */
+@media only screen and (max-width: 600px) {
+    .navbar{
+        display: none;
+    }
+    .circular-menu{
+        display: block;
+    }
+  }
+
+/* end media-qierries */
