--- a/css/index.css
+++ b/css/index.css
@@ -455,6 +455,7 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2em;
 }
 
 .contact>.container>.title{
