--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,12 @@ a {
   margin: 0 auto;
 }
 
+@media (max-width: 1125px) {
+  .innerContainer {
+    width: 80%;
+  }
+}
+
 /* navbar */
 .navbar {
   position: fixed;
@@ -248,6 +254,12 @@ a {
   cursor: pointer;
 }
 
+@media (max-width: 768px) {
+  #about > :first-child .animation {
+    display: none;
+  }
+}
+
 @-webkit-keyframes jump {
   0% {
     -webkit-transform: translate(50%, 50%);
@@ -349,8 +361,27 @@ a {
   margin-bottom: 2rem;
 }
 
-#projects > .project {
+#projects .project {
   margin-bottom: 8rem;
+}
+
+@media (max-width: 1125px) {
+  #projects > :last-child {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 2rem;
+    margin-bottom: 8rem;
+  }
+  #projects .project {
+    margin-bottom: 0rem;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin: 0 auto;
+  }
 }
 
 #contacts {
